--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,6 @@
     {% include scripts/misc.html %}
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
-    {% include cookie-consent.html %}
+    {% include scripts/cookie-consent.html %}
   </body>
 </html>
